# javimtz_pycounts

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/javimtz_pycounts/: __init__.py
tests/: test_javimtz_pycounts.py
